Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29246

Running and debugging with external Terminal does not work

XMLWordPrintable

    • macOS
    • f00323451 (11.0), 6cd196511 (12.0), 1998ef19b (12.0)

      When disabling the internal terminal and enabling "run in terminal" for a project, a Terminal window opens when running/debugging but fails with

      % /var/folders/n5/p6z9pt_n06s13wk0t_gydvk40000gn/T/tmp6urr5dcn
      qtc.process_stub: Failed to open env file:  "/private/var/folders/n5/p6z9pt_n06s13wk0t_gydvk40000gn/T/QtCreator.DamUdv"
      

      Opening a Terminal from the project tree and environment widgets does work though.

        For Gerrit Dashboard: QTCREATORBUG-29246
        # Subject Branch Project Status CR V

            madwinter Marcus Tillmanns
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes