Utils: Convert openTerminal.py to Terminal.app

Qt Creator 10.0 may have saved "openTerminal.py" in its settings.
We don't used that anymore, so we convert it to Terminal.app.

Fixes: QTCREATORBUG-29246
Change-Id: Ifc67e6e7bbc7af5dfaf6703b3bd34ded847c5013
Reviewed-by: Eike Ziller <eike.ziller@qt.io>